--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
 <body>
 
     <h1>Alex Lopez - PEC 2</h1>
-
     <div class="container">
         <div class="visualization" id="viz1">
             <h2>Cartograma</h2>
+            <iframe src="https://go-cart.io/embed/cart/ad1444zt44dj69o80chsm7hdm4rviui1" width="800" height="550" style="border: 1px solid black;"></iframe>
             <p class="reference">
-                Datos obtenidos del INE, referentes al 4to trimestre del 2023. <a href="https://www.ine.es/jaxiT3/Tabla.htm?t=4213&L=0">Enlace</a>
+                Datos obtenidos del INE, referentes al 2021.<br>Herramienta de Visualización: go-cart<br>
+                <a href="https://go-cart.io/cartogram">Web usada para el cartograma</a><br>
+                <a href="https://www.ine.es/jaxiT3/Tabla.htm?t=4213&L=0">INE Tasa Empleo</a><br>
+                <a href="https://www.ine.es/jaxiT3/Tabla.htm?t=2853&L=0"> INE Población</a>
             </p>
         </div>
 
