--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     <div class="container">
         <div class="visualization" id="viz1">
             <h2>Cartograma</h2>
-            <iframe src="https://go-cart.io/embed/cart/ad1444zt44dj69o80chsm7hdm4rviui1" width="800" height="550" style="border: 1px solid black;"></iframe>
+            <iframe src="https://go-cart.io/embed/cart/ad1444zt44dj69o80chsm7hdm4rviui1" width="100%" 
+            height="400" 
+            style="border: 1px solid black; max-width: 100%;"
+            allowfullscreen></iframe>
             <p class="reference">
                 Datos obtenidos del INE, referentes al 2021.<br>Herramienta de Visualización: go-cart<br>
                 <a href="https://go-cart.io/cartogram">Web usada para el cartograma</a><br>
