[NEW] añadido Flourish

--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
 </head>
 <body>
 
-    <h1>Alex Lopez - PEC 2</h1>
+    <h1>Visualización de Datos</h1>
+    <h2>Alex Lopez - PEC 2</h2>
     <div class="container">
         <div class="visualization" id="viz1">
             <h2>Cartograma</h2>
+            <h3>Número de empleados por comunidad autónoma</h3>
             <iframe src="https://go-cart.io/embed/cart/ad1444zt44dj69o80chsm7hdm4rviui1" width="100%" 
-            height="400" 
+            height="700" 
             style="border: 1px solid black; max-width: 100%;"
             allowfullscreen></iframe>
             <p class="reference">
@@ -61,7 +63,17 @@
 
         <div class="visualization" id="viz3">
             <h2>Chord Diagram</h2>
-
+            <div class="flourish-embed flourish-chord" data-src="visualisation/20111408">
+                <script src="https://public.flourish.studio/resources/embed.js"></script>
+                <noscript>
+                    <img src="https://public.flourish.studio/visualisation/20111408/thumbnail" width="100%" alt="chord visualization" />
+                </noscript>
+            </div>
+            <p class="reference">
+                Datos obtenidos de un dataset de Kaggle acerca de vuelos<br>Herramienta de Visualización: Flourish<br>
+                <a href="https://www.kaggle.com/datasets/tylerx/flights-and-airports-data">Dataset Kaggle</a>
+            </p>
+            
         </div>
 
     </div>
