[NEW] añadir dendrograma

--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
 
         <div class="visualization" id="viz2">
             <h2>Dendrograma Lineal</h2>
+            <p class="explanation">Aquí he hecho un clustering jerárquico con Python, usando para cada capital de provincia, la población, latitud, longitud y altura.
+                Con esto obtendremos una medida de lo similares que son las ciudades en estos términos, algo que puede ser útil si queremos encontrar grupos de ciudades
+                que tengan poblaciones parecidas y estén cerca en posición y altura.
+            </p>
+            <img src="dendrograma.png" alt="Dendrograma por provincias" width="100%">
+            <p class="reference">
+                Datos obtenidos del Instituto Geográfico Nacional<br>Herramienta de Visualización: Python / Matplotlib / SciPy<br>
+                <a href="https://www.ign.es/web/ane-datos-geograficos/-/datos-geograficos/datosPoblacion?tipoBusqueda=capitales">Datos IGN</a>
+            </p>
             
         </div>
 
